fix: mis-aligned Honorary Treasurer's Card

--- a/src/styles/pages/contacts.module.css
+++ b/src/styles/pages/contacts.module.css
@@ -25,7 +25,7 @@ body {
   overflow-y: scroll;*/
 }
 .postHeading {
-  font-size: 2.25rem;
+  font-size: 2rem;
   text-align: center;
   margin: 1.5rem;
   color: #f1c40f;
